--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -293,37 +293,35 @@ iframe:hover {
   text-align: center;
 }
 
-#contactUs form {
+ #contactUs form {
   margin: auto;
-  text-align: center;
-  margin-top: 30px;
-  width: max-content;
+  width: 50%;
   max-width: 100vw;
-}
-label {
+} 
+/* label {
   width: 30%;
   display: inline-block;
   font-size: 1.2em;
   text-align: left;
-}
-input {
-  height: 30px;
-  border-radius: 5px;
-  border: none;
-  margin-bottom: 5px;
-  width: 65%;
-}
+} */
+  /* input {
+    height: 30px;
+    border-radius: 5px;
+    border: none;
+    margin-bottom: 5px;
+    width: 65%;
+  } */
 input:focus,
 textarea:focus {
   /* box-shadow: 0 0 20px rgb(255, 0, 200); */
   filter: drop-shadow(3px 1px 3px rgb(255, 255, 255));
 }
 
-textarea {
+/* textarea {
   width: 65%;
   border-radius: 5px;
   vertical-align: top;
-}
+} */
 
 input[type="submit"] {
   margin-top: 30px;
@@ -387,6 +385,14 @@ footer .backToTop {
   background-color: white;
 }
 
+#phoneWarning, #emailWarning{
+  display: none;
+  color: red;
+  background-color: rgba(1, 1, 1, 0.2);
+  font-weight: bolder;
+  max-width: 700px;
+}
+
 /*-----------------------------------QUERIES ESPECIFICAS--------------------------------*/
 
 @media (max-width: 820px) {
@@ -447,3 +453,4 @@ footer .backToTop {
     margin-bottom: 10px;
   }
 }
+
