--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -437,20 +437,9 @@ footer .backToTop {
 }
 
 @media (max-width: 480px) {
-  input {
-    width: 80vw;
-    display: block;
-    margin: auto;
-    height: 35px;
-  }
-  textarea {
-    width: 80vw;
-    display: block;
-    margin: auto;
-  }
-  label {
-    text-align: center;
-    margin-bottom: 10px;
+  #contactUs form{
+    margin: 0 auto;
+    width: 90vw;
   }
 }
 
